Fixed audio crash